# wgpu_engine

./: .gitignore  Cargo.toml
src/: lib.rs
src/common/: events.rs  mod.rs  requirements.rs
src/common/resources/: builders.rs  descriptors.rs  handles.rs  mod.rs
src/common/resources/descriptors/: bind_group.rs  bind_group_layout.rs  buffer.rs  command_buffer.rs  compute_pipeline.rs  device.rs  instance.rs  mod.rs  pipeline_layout.rs  render_pipeline.rs  sampler.rs  shader_module.rs  swapchain.rs  texture.rs  texture_view.rs
src/common/tasks/: descriptor.rs  mod.rs
src/engine/: batch.rs  mod.rs  resource_manager.rs  surface_processing.rs  task_manager.rs  task_processing.rs
src/engine/engine_task/: mod.rs
src/entity_manager/: dmg_entity_manager.rs  mod.rs  update_context.rs
src/tests/: mod.rs
src/tests/rectangle_test/: mod.rs  surface_manager.rs
src/tests/triangle_test/: mod.rs  shaders.rs
src/utils/: buffer_manager.rs  mod.rs
