[package]
name = "wgpu_engine"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
wgpu = {git="https://github.com/Uniformbuffer3/wgpu",branch="external_memory_direct_display"}
vecstorage = "*"
tokio = {version="*",features=["rt-multi-thread","sync"]}
tokio-scoped = {git="https://github.com/jaboatman/tokio-scoped"}
tokio-stream = "*"
petgraph = "*"
pal = {version="*",git="https://github.com/Uniformbuffer3/platform_abstraction_layer.git",features=["xcb_platform","parry2d","wgpu_backend"],default-features=false,optional = true}
raw-window-handle = "*"
bytemuck = {version="*",features = ["derive"]}
field-offset = "*"
paste = "*"
downcast-rs = "*"

[dev-dependencies]
env_logger = "*"

image = "*"
ultraviolet = {version="*",features=["bytemuck"]}
inline-spirv = "*"


[features]
multithreading = []
default = ["pal"]

