[package]
name = "wgpu_engine"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
wgpu_standard = {version="0.9",package="wgpu", optional=true}
wgpu_custom = {git="https://github.com/Uniformbuffer3/wgpu",branch="external_memory_direct_display", package="wgpu", optional=true}
pal = {version="*",git="https://github.com/Uniformbuffer3/platform_abstraction_layer.git",features=["xcb_platform","parry2d"],default-features=false,optional = true}
vecstorage = "*"
tokio = {version="*",features=["rt-multi-thread","sync"]}
tokio-scoped = {git="https://github.com/jaboatman/tokio-scoped"}
tokio-stream = "*"
petgraph = "*"
raw-window-handle = "*"
bytemuck = {version="*",features = ["derive"]}
field-offset = "*"
paste = "*"
downcast-rs = "*"

[dev-dependencies]
env_logger = "*"

image = "*"
ultraviolet = {version="*",features=["bytemuck"]}
inline-spirv = "*"

[features]
multithreading = []
wgpu_custom_backend = ["pal","pal/wgpu_custom_backend","wgpu_custom"]
wgpu_standard_backend = ["pal","pal/wgpu_standard_backend","wgpu_standard"]
default = ["wgpu_custom_backend"]

#[patch."https://github.com/Uniformbuffer3/platform_abstraction_layer.git"]
#pal = { path = "../pal"}

#[patch."https://github.com/Uniformbuffer3/wgpu.git"]
#wgpu_custom = { path = "../wgpu/wgpu" ,package="wgpu"}
