[package]
name = "wgpu_engine"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
wgpu_standard = {version="0.9",package="wgpu", optional=true}
wgpu_custom = {git="https://github.com/Uniformbuffer3/wgpu",branch="external_memory_direct_display", package="wgpu", optional=true}
pal = {version="*",git="https://github.com/Uniformbuffer3/platform_abstraction_layer.git",features=["xcb_platform","parry2d"],default-features=false,optional = true}
vecstorage = "*"
tokio = {version="*",features=["rt-multi-thread","sync"]}
tokio-scoped = {git="https://github.com/jaboatman/tokio-scoped"}
tokio-stream = "*"
petgraph = "*"
raw-window-handle = "*"
bytemuck = {version="*",features = ["derive"]}
field-offset = "*"
paste = "*"
downcast-rs = "*"
calloop = "*"
nix = "*"

[dev-dependencies]
env_logger = "*"

#image = "*"
#ultraviolet = {version="*",features=["bytemuck"]}
#inline-spirv = "*"

[features]
multithreading = []
wgpu_custom_backend = ["pal","pal/wgpu_custom_backend","wgpu_custom"]
wgpu_standard_backend = ["pal","pal/wgpu_standard_backend","wgpu_standard"]
default = ["wgpu_custom_backend"]

[patch."https://github.com/Uniformbuffer3/platform_abstraction_layer.git"]
pal = { path = "../pal"}

[patch."https://github.com/Uniformbuffer3/wgpu.git"]
wgpu_custom = { path = "../wgpu/wgpu" ,package="wgpu"}

[patch."https://github.com/Uniformbuffer3/gfx"]
gfx-hal = { path = "../gfx/src/hal" }
gfx-backend-empty = { path = "../gfx/src/backend/empty" }
gfx-backend-vulkan = { path = "../gfx/src/backend/vulkan" }
gfx-backend-gl = { path = "../gfx/src/backend/gl" }
gfx-backend-dx12 = { path = "../gfx/src/backend/dx12" }
gfx-backend-dx11 = { path = "../gfx/src/backend/dx11" }
gfx-backend-metal = { path = "../gfx/src/backend/metal" }
